# strflags

./: Cargo.toml  README.md
src/: lib.rs  operators.rs  query.rs  set.rs
tests/: test.rs
