[package]
name = "strflags"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust = "1.65.0"

readme = "README.md"
repository = "https://github.com/mintlu8/strflags"
description = """
A string-enum and string-flags with fixed variants that can also accept arbitrary data.
"""
keywords = ["string", "set", "enum", "flags"]

[features]
debug = ["levenshtein", "log"]

[dependencies]
convert_case = "0.6"
ecow = { version = "0.1", features = ["serde"] }
identconv = "0.2"
smallvec = { version = "1.11", features = ["serde", "const_new"] }

levenshtein = { version = "1", optional = true }
log = { version = "0.4", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde = "1"
